tests/test_error_return.err
Error in line 5: Returning a not empty value while expecting void.
