tests/test_error_return.uk
def main() void{
    for(int i=0; i<3; i=i+1)
    {
        println(i);
        return(4);
    }
}
